--- a/Worldprojections (1)/Worldprojections/worldprojections.html
+++ b/Worldprojections (1)/Worldprojections/worldprojections.html
@@ -8,8 +8,8 @@
 <body>
     <h1>In this project I learned how to display images in different projections</h1>
     
-    <h2 style="color:red">Describe in your own words how you displayed the map in different projections using QGIS</h2>
-    <p>You can write a paragraph here</p>
+    <h2 style="color:red">Displaying the map in different projections using QGIS</h2>
+    <p>QGIS allows the user to change the projection of a map by clicking the CRS button in the bottem right hand corner. From there, I was able to search for different projections by typing the EPSG number into the "filter" search bar. After selecting the desired projection and clicking "OK" the map will appear in the proper projection on the main page. </p>
     
     <h2>WGS84 Projection</h2>
     <h3>Some observations</h3>
@@ -20,6 +20,41 @@
     <h3>Some observations</h3>
     <a href=".//maps/54043.png">
     <img src=".//maps/54043.png" alt="Aitoff" width='500px'>
+    </a>
+    <h2>WGS84 Projection</h2>
+    <h3>Some observations</h3>
+    <a href=".//maps/3857.png">
+    <img src=".//maps/3857.png" alt="WGS84" width='500px'>
+    </a>
+    <h2>Sphere Winkle 1 Projection</h2>
+    <h3>Some observations</h3>
+    <a href=".//maps/53018.png">
+    <img src=".//maps/53018.png" alt="Sphere Winkle" width='500px'>
+    </a>
+    <h2>World Cylindrical Equal Area Projection</h2>
+    <h3>Some observations</h3>
+    <a href=".//maps/54034.png">
+    <img src=".//maps/54034.png" alt="Cylindrical equal area" width='500px'>
+    </a>
+    <h2>World Equidistant Conic Projection</h2>
+    <h3>Some observations</h3>
+    <a href=".//maps/54027.png">
+    <img src=".//maps/54027.png" alt="World equidistant conic" width='500px'>
+    </a>
+    <h2>North Pole Azimuthal Equidistant Projection</h2>
+    <h3>Some observations</h3>
+    <a href=".//maps/102016.png">
+    <img src=".//maps/102016.png" alt="North Pole Azimuthal Equidistant" width='500px'>
+    </a>
+    <h2>Sphere Azimuthal Equidistant Projection</h2>
+    <h3>Some observations</h3>
+    <a href=".//maps/53032.png">
+    <img src=".//maps/53032.png" alt="Sphere azimuthal equidistant" width='500px'>
+    </a>
+    <h2>Sphere van der Grinten l Projection</h2>
+    <h3>Some observations</h3>
+    <a href=".//maps/53029.png">
+    <img src=".//maps/53029.png" alt="Sphere van der grinten l" width='500px'>
     </a>
     <h2 style="color:red">Now, you should <u>add the following projections on your own:</u></h2>
     <h3>EPSG: 3857, 53018, 54034, 54027, 102016, and two additional projections that you choose.</h3>
