--- a/Worldprojections (1)/Worldprojections/worldprojections.html
+++ b/Worldprojections (1)/Worldprojections/worldprojections.html
@@ -12,47 +12,47 @@
     <p>QGIS allows the user to change the projection of a map by clicking the CRS button in the bottem right hand corner. From there, I was able to search for different projections by typing the EPSG number into the "filter" search bar. After selecting the desired projection and clicking "OK" the map will appear in the proper projection on the main page. </p>
     
     <h2>WGS84 Projection</h2>
-    <h3>Some observations</h3>
+    <h3>The center portion of the map is the most accurate portion of the map while toward the poles there is a large amount of horizontal stretching. </h3>
     <a href=".//maps/4326.png">
     <img src=".//maps/4326.png" alt="WGS84" width='500px'>
     </a>
     <h2>Aitoff Projection</h2>
-    <h3>Some observations</h3>
+    <h3>The map dipicts continents well, but the edge of the map has some shape distortion as continents such as Austrailia suffer from some amount of vertical stretching.</h3>
     <a href=".//maps/54043.png">
     <img src=".//maps/54043.png" alt="Aitoff" width='500px'>
     </a>
     <h2>WGS84 Projection</h2>
-    <h3>Some observations</h3>
+    <h3>Shape seems to be generally well conserved with this map compared to the others. As with the other maps, the accuracy is highest near the center and increases moving away from the center point. While the shapes of the continents are well preserved, size seems to be an issue.</h3>
     <a href=".//maps/3857.png">
     <img src=".//maps/3857.png" alt="WGS84" width='500px'>
     </a>
     <h2>Sphere Winkle 1 Projection</h2>
-    <h3>Some observations</h3>
+    <h3>This map seems to stike a balance between size and shape distortion. There does seem to be some priorization of size however, as a large portion of the area seems to have some vertical stretching.</h3>
     <a href=".//maps/53018.png">
     <img src=".//maps/53018.png" alt="Sphere Winkle" width='500px'>
     </a>
     <h2>World Cylindrical Equal Area Projection</h2>
-    <h3>Some observations</h3>
+    <h3>The map's accuracy seems to be highest toward the center of the map. The size and shape distortion seems to increase as you move in either direction.Vertical stretching and sze distortion seems heighes near the coners of the map.</h3>
     <a href=".//maps/54034.png">
     <img src=".//maps/54034.png" alt="Cylindrical equal area" width='500px'>
     </a>
     <h2>World Equidistant Conic Projection</h2>
-    <h3>Some observations</h3>
+    <h3>This map seems to depict the area at the north pole most accurately and distortion increases moving away from this area. The area to the edges of the map are streched horizontally and vertically, and there is a lot of shape and size distortion with many continents.</h3>
     <a href=".//maps/54027.png">
     <img src=".//maps/54027.png" alt="World equidistant conic" width='500px'>
     </a>
     <h2>North Pole Azimuthal Equidistant Projection</h2>
-    <h3>Some observations</h3>
+    <h3>This is another map that display the north pole accurately at the expense of distorting continents like alaska which are far wider than accurate.</h3>
     <a href=".//maps/102016.png">
     <img src=".//maps/102016.png" alt="North Pole Azimuthal Equidistant" width='500px'>
     </a>
     <h2>Sphere Azimuthal Equidistant Projection</h2>
-    <h3>Some observations</h3>
+    <h3>This map is able to present a large amount of the continents accuratly in both shape and size. However there is a large amount of size distortion and vertical stretching toward the edges of the map. </h3>
     <a href=".//maps/53032.png">
     <img src=".//maps/53032.png" alt="Sphere azimuthal equidistant" width='500px'>
     </a>
     <h2>Sphere van der Grinten l Projection</h2>
-    <h3>Some observations</h3>
+    <h3>Size distortion seems highest approaching the poles, while shape disortion seems greatest to the far east and west. </h3>
     <a href=".//maps/53029.png">
     <img src=".//maps/53029.png" alt="Sphere van der grinten l" width='500px'>
     </a>
