--- a/Worldprojections (1)/Worldprojections/worldprojections.html
+++ b/Worldprojections (1)/Worldprojections/worldprojections.html
@@ -9,7 +9,7 @@
     <h1>In this project I learned how to display images in different projections</h1>
     
     <h2 style="color:red">Displaying the map in different projections using QGIS</h2>
-    <p>QGIS allows the user to change the projection of a map by clicking the CRS button in the bottem right hand corner. From there, I was able to search for different projections by typing the EPSG number into the "filter" search bar. After selecting the desired projection and clicking "OK" the map will appear in the proper projection on the main page. </p>
+    <p>QGIS allows the user to change the projection of a map by clicking the CRS button in the bottem right hand corner. From there, the user is able to search for different projections by typing the EPSG number into the "filter" search bar. After selecting the desired projection and clicking "OK" the map will appear in the proper projection on the main page. </p>
     
     <h2>WGS84 Projection</h2>
     <h3>The center portion of the map is the most accurate portion of the map while toward the poles there is a large amount of horizontal stretching. </h3>
