--- a/Worldprojections (1)/Worldprojections/worldprojections.html
+++ b/Worldprojections (1)/Worldprojections/worldprojections.html
@@ -32,13 +32,12 @@
     <img src=".//maps/53018.png" alt="Sphere Winkle" width='500px'>
     </a>
     <h2>World Cylindrical Equal Area Projection</h2>
-    <h3>This map seems to depict the area at the North Pole most accurately and distortion increases moving away from this area. The area to the edges of the map are stretched horizontally and vertically, and there is a lot of shape and size distortion with many continents. Unlike other maps, this map is circular and seems to view the Earth from above the North Pole.
-    </h3>
+    <h3>The map's accuracy seems to increase toward the center of the map. The accuracy of  size and shape seems to decrease as you move in either direction. Vertical stretching and size distortion seems highest near the corners of the map.</h3>
     <a href=".//maps/54034.png">
     <img src=".//maps/54034.png" alt="Cylindrical equal area" width='500px'>
     </a>
     <h2>World Equidistant Conic Projection</h2>
-    <h3>This map seems to depict the area at the north pole most accurately and distortion increases moving away from this area. The area to the edges of the map are streched horizontally and vertically, and there is a lot of shape and size distortion with many continents.</h3>
+    <h3>This map seems to depict the area at the North Pole most accurately and distortion increases moving away from this area. The area to the edges of the map are stretched horizontally and vertically, and there is a lot of shape and size distortion with many continents. Unlike other maps, this map is circular and seems to view the Earth from above the North Pole.</h3>
     <a href=".//maps/54027.png">
     <img src=".//maps/54027.png" alt="World equidistant conic" width='500px'>
     </a>
